modified project files

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,17 @@
+/* page general layout */
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .container {
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 15% 85%;
+}
+
+main {
+    grid-column: 2;
+    height: max-content;
+    background-color: #f0f2f2;
+    padding-left: 40px;
 }
 
 /* banner CSS */
@@ -21,82 +29,6 @@ img {
 }
 
 header h3 {
-    color: white;
-}
-
-/* contacts(note) page CSS */
-.contact-img {
-    float: left;
-    height: 70px;
-    width: 70px;
-    margin: 0;
-    margin-right: 10px;
-}
-
-.info {
-    margin-top: 10px;
-}
-
-.info h2 {
-    margin: 3px 0;
-}
-
-.info p {
-    margin: 0;
-}
-
-#assign {
-    background-color: #48BB78;
-}
-
-#switch {
-    background-color: #e3d407;
-}
-
-#assign, #switch {
-    border-radius: 3px;
-    border: none;
-    padding: 7px 10px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.section {
-    display: grid;
-    grid-template-rows: auto auto;
-    border: 1px solid grey;
-    border-radius: 3px;
-    margin-top: 15px;
-    background-color: white;
-    padding: 30px;
-    margin-right: 15px;
-}
-
-.section h4 {
-    margin-bottom: 0;
-    margin-top: 5px;
-}
-
-.section hr {
-    border: 1px dotted grey;
-    width: 1090px;
-}
-
-.date {
-    margin-top: 0;
-}
-
-#text {
-    margin: 20px 15px 10px 15px;
-    padding: 10px;
-}
-
-#add-note {
-    border-radius: 4px;
-    background-color: #0443cc;
-    width: 70px;
-    border: none;
-    font-weight: bold;
     color: white;
 }
 
@@ -124,19 +56,118 @@ hr {
     margin-left: 0;
 }
 
+/* view contacts / add note page CSS */
+.contact-img {
+    float: left;
+    height: 70px;
+    width: 70px;
+    margin: 0;
+    margin-right: 10px;
+}
+
+#display-info {
+    display: grid;
+    grid-template-columns: 500px 700px;
+    justify-content: space-between;
+    grid-gap: 20px;
+}
+
+#display-info input {
+    width: 350px;
+   /* border: none; */
+}
+
+.column p {
+    margin-top: 0;
+    color: #21356b;
+}
+
+.info {
+    margin-top: 20px;
+    width: 500px;
+}
+
+.info h2 {
+    margin: 3px 0;
+}
+
+.info p {
+    margin: 0;
+}
+
+.btn {
+    position: absolute;
+    right: 50px;
+    top: 100px;
+}
+
+#assign {
+    background-color: #48BB78;
+}
+
+#switch {
+    background-color: #e3d407;
+}
+
+#assign, #switch {
+    border-radius: 7px;
+    border: none;
+    padding: 7px 10px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.section {
+    display: grid;
+    grid-template-rows: auto auto;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border-radius: 3px;
+    margin-top: 15px;
+    background-color: white;
+    padding: 15px 25px;
+    margin-right: 20px;
+}
+
+.section h4 {
+    margin-bottom: 0;
+    margin-top: 5px;
+}
+
+.section hr {
+    border: 1px dotted grey;
+    width: 98%;
+}
+
+.date {
+    margin-top: 0;
+}
+
+#text {
+    margin: 20px 15px 10px 10px;
+    padding: 10px;
+}
+
+#add-note {
+    border-radius: 4px;
+    background-color: #0443cc;
+    width: 90px;
+    border: none;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+    margin: 10px 0 0 1050px;
+}
+
 /* home page CSS */
 .dash-heading {
     height: 30px;
     width: 150px;
-    display: inline-block;
     margin-bottom: 0;
-    margin-right: 850px;
+    margin-right: 950px;
     margin-top: 0;
 }
 
 #add-contact {
-    grid-column: 2;
-    display: inline-block;
     background-color: #0443cc;
     border: none;
     border-radius: 3px;
@@ -146,36 +177,61 @@ hr {
     color: white;
 }
 
-main {
-    background-color: lightgrey;
-    padding-left: 40px;
-}
-
 .dash-div {
     display: inline-flex;
     align-items: center;
-    height: 50px;
-    margin-top: 20px;
+    margin-top: 18px;
+    margin-bottom: 15px;
 }
 
-/* div to display results on dashboard */
-.users { 
-    grid-column: 2;
-    border: 1px solid black;
-    height: 500px;
-    width: 95%;
-    background-color: bisque;
+/* div for filter btns on dashboard */
+.filter-btn { 
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-wrap: wrap;
+    border-radius: 3px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    margin-right: 35px;
+    background-color: white;
 }
 
-footer {
-    position: absolute;
-    bottom: 0;
-    width: 99%;
-    height: 60px;
+.filter-btn h3 {
+    margin-left: 20px;
 }
 
-footer p {
-    text-align: center;
+.filter-btn button {
+    background: none;
+    border: none;
+    margin-left: 18px;
+    transition: 0.15s;
+}
+
+.filter-btn button:hover {
+    border-radius: 0;
+    border-bottom: 3px solid blueviolet;
+    color: blueviolet;
+}
+
+.home-list {
+    background-color: white;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    margin-right: 35px;
+}
+
+.home-list table thead {
+    background-color: #f0f2f2;
+}
+
+.home-list table td, .home-list table th {
+    padding: 15px;
+}
+
+.home-list table {
+   border-collapse: collapse;
+   width: 100%;
+   text-align: left;
 }
 
 /* login page CSS */
@@ -209,4 +265,142 @@ input {
     justify-content: center;
 }
 
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 99%;
+    height: 60px;
+}
+
+footer p {
+    text-align: center;
+}
+
+/* new_contact page CSS */
+
+.new-contact form {
+    display: grid;
+    grid-template-columns: 500px 500px;
+    background-color: white;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    justify-content: space-between;
+    margin-right: 30px;
+    margin-bottom: 15px;
+}
+
+#title, #assigned, #type {
+    display: block;
+}
+
+#assigned, #type {
+    width: 415px;
+}
+
+.new-contact input {
+    margin-top: 5px;
+    width: 400px;
+    border: 1px solid #cfd1d0;
+}
+
+.new-contact select {
+    border-radius: 4px;
+    padding: 7px;
+    border: 1px solid #cfd1d0;
+    margin-top: 5px;
+}
+
+.new-contact #save {
+    background-color: #0443cc;
+    color: white;
+    border-radius: 4px;
+    border: none;
+    font-weight: bold;
+    padding: 7px 5px;
+    width: 60px;
+    cursor: pointer;
+    margin: 15px 0 0 1020px;
+}
+
+/* new_user page */
+.new-user form {
+    display: grid;
+    grid-template-columns: 500px 500px;
+    background-color: white;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    justify-content: space-between;
+    margin-right: 30px;
+    margin-bottom: 15px;
+}
+
+.new-user input {
+    margin-top: 5px;
+    width: 400px;
+    border: 1px solid #cfd1d0;
+}
+
+.new-user select {
+    display: block;
+    border-radius: 4px;
+    padding: 7px;
+    border: 1px solid #cfd1d0;
+    margin-top: 5px;
+    width: 415px;
+}
+
+.new-user #save {
+    background-color: #0443cc;
+    color: white;
+    border-radius: 4px;
+    border: none;
+    font-weight: bold;
+    padding: 7px 5px;
+    width: 60px;
+    height: 28px;
+    cursor: pointer;
+    margin: 30px 0 0 350px;
+}
+
+/* users page */
+.users-list {
+    background-color: white;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    margin-right: 35px;
+}
+
+.users-list table thead {
+    background-color: #f0f2f2;
+}
+
+.users-list table td, .users-list table th {
+    padding: 15px;
+    
+}
+
+.users-list table {
+   border-collapse: collapse;
+   width: 100%;
+   text-align: left;
+}
+
+#add-user {
+    border: none;
+    background-color: #0443cc;
+    cursor: pointer;
+    font-weight: bold;
+    color: white;
+    padding: 8px 10px;
+    border-radius: 4px;
+}
+
+.heading-btn {
+    display: inline-flex;
+    align-items: center;
+}
+
+.heading-btn h2 {
+    margin-right: 1045px;
+}
 
